[project]
name = "what-was-that-word"
version = "0.1.0"
description = "Semantic word lookup"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hnswlib==0.8.0",
    "sentence-transformers==3.0.1",
    "numpy>=1.26.4,<2.0.0", # some Intel Mac compatible thing is compiled against NumPy < 2
]

[project.scripts]
what-was-that-word = "main:main"

[tool.uv]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]
